--- a/index.css
+++ b/index.css
@@ -1,12 +1,13 @@
 body {
 	background-color: #2c3e50;
+	color: white;
 }
 .btn {
 	cursor: pointer;
 }
 
 h1 {
-	color: #34495e;
+	color: white;
 	transition: color 0.5s ease-in-out;
 }
 
